--- a/VRChat/79/1341679.html
+++ b/VRChat/79/1341679.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ZePqaNNPChh+IDIDLqKAT0anw+vhEEn57zg2kZp6fDI="></script>
+    "nRgzM5Jw2C/I62H2ZeGdfXr5u38K8xGIRZR0n/15gkU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"平成セット(フロッピー、VHSテープ、カセットテープ)","description":"ローポリ＋ドット絵テクスチャで作成されたフロッピーディスク、VHSテープ、カセットテープの3点セットです。\n超ローポリ＋解像度低めのテクスチャなので、その点をご了承ください。(土台の段ボールは付属しません)\n\nパーティクルとかワールドの賑やかし、重力銃による射出、VHSテープによるビンタ等に使うとちょうど良いかと思います。\n\n購入前にSketchfabでテクスチャやポリゴンの確認をしていただけると嬉しいです。↓の方に貼ってあります。\n\n","url":"https://booth.pm/ja/items/1341679","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/f215380d-1931-4039-9529-a102e7243a1f/i/1341679/4a26dfcf-31a5-4ff9-bec0-edf9d4afd344_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZePqaNNPChh+IDIDLqKAT0anw+vhEEn57zg2kZp6fDI="></script>
+    nonce="nRgzM5Jw2C/I62H2ZeGdfXr5u38K8xGIRZR0n/15gkU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -626,9 +626,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
