--- a/VRChat/65/1341565.html
+++ b/VRChat/65/1341565.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "OGtOlkcyj7fXRazjmJnCFezxOXtrIoNQ9vxgv49nunk="></script>
+    "gZkPgp9OITUSEA49/Fgk/A6B7XZ58Q3exCCfu1BpQv8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"レトロな手榴弾","description":"◆　ちょっと昔の手榴弾の3Dモデルです。\n　　日本の九七式手榴弾をモチーフにしています。\n　　ピンは別オブジェクトになっているので取り外せます。\n　　prefab設定済みでUnityでの導入簡単です。\n　　三角面：本体△1663　ピン△824　","url":"https://booth.pm/ja/items/1341565","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/866dbe17-ef91-48b7-8c82-b92e350a81ed/i/1341565/5628dcff-dc06-46b0-bf3f-18b329f19520_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OGtOlkcyj7fXRazjmJnCFezxOXtrIoNQ9vxgv49nunk="></script>
+    nonce="gZkPgp9OITUSEA49/Fgk/A6B7XZ58Q3exCCfu1BpQv8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -444,9 +444,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
