--- a/VRChat/55/1131055.html
+++ b/VRChat/55/1131055.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "+9EsybJyZN4hvDJ/SaoCMGIqObzuS9Da0YZtf9NcwcQ="></script>
+    "Q9E/yPBpyw3ehTOyUSkpG8/DSovoXR3v7YyuehzFgh4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【U10素体版】ver.6.0.2【完全QUEST対応版は別ページにあります】","description":"※7500ポリゴン以下の完全クエスト対応版は別ページにてご紹介しています→ https://kindergarten21.booth.pm/items/2406667 ※\n\n----------------------------------------\n※ver.6.0よりPhysBone対応となりました※\n\n現在のデータは最新のVRCに対応するため以下の変更を行いました。\n・2022年5月よりシェーダーの同梱を廃止\n・2022年8月よりアニメーションの同梱を廃止\nThe following changes have been made to the current data to comply with the latest VRC\n*Shaders will no longer be included in May 2022.\n*The animation will no longer be included in the package as of August 2022.\n\n\nパッケージのインポートを行う前に以下のシェーダーをDLし、インポートしてください。\nU10Hで使用しているシェーダーは以下の通りです。\nPlease DL and import the following shaders before importing the package.\nThe following shaders are used in U10H.\n\n「ArxCharacterShaders」\nhttps://packetbird.booth.pm/items/2493539\n\n「ユニティちゃんトゥーンシェーダー2.0」\nhttps://unity-chan.com　右上のDATA DOWNLOADから進んだ先。\n\n「Crystal Shader」\nhttps://booth.pm/ja/items/1148311\n\n「MToon」※同梱済み\nhttps://github.com/Santarh/MToon\n\n\nまた、アニメーションファイルもDLしインポートしてください。\nアニメーションファイルは、BOOTHの商品ページから無料でDLできるようになっています。\nPlease also DL and import the animation files.\nThe animation files can be downloaded free of charge from the BOOTH product page.\n\n----------------------------------------\n\n\n\n常なるこの世を維持する【常世界機構】が管理保有する汎用人型自立稼働システムU10。\n…を人間ボディで遊びたい方向けの素体ver.です。\nU10の顔で人間になりたい方はご利用ください。\n\nリップシンク・フルトラッキング・アイトラッキング対応／約40,000ポリゴン／ユニティちゃんトゥーンシェーダー使用です。\n\nVRchat用にセットアップ済みのモデル／QUEST用シェーダーに対応した1メッシュモデル／VRMモデル／cluster対応VRM／素体／改変用PSDデータ／改変用blenderデータが同梱されています。\n\nVRChat内のワールドにて試着が可能です。\nhttps://www.vrchat.com/home/launch?worldId=wrld_12ca024e-3ae8-4966-bf2f-c0621f622568\u0026instanceId=0\n\nVRM版／cluster対応版の挙動はVRoidHubにて確認できます。\nVRM版→ https://hub.vroid.com/characters/2406757829548781233\ncluster対応版→ https://hub.vroid.com/characters/2335992945231988540","url":"https://booth.pm/ja/items/1131055","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1131055/59be520a-54f5-4825-affe-96af28b0f306_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+9EsybJyZN4hvDJ/SaoCMGIqObzuS9Da0YZtf9NcwcQ="></script>
+    nonce="Q9E/yPBpyw3ehTOyUSkpG8/DSovoXR3v7YyuehzFgh4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -839,9 +839,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
