--- a/VRChat/52/1131052.html
+++ b/VRChat/52/1131052.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "3MUAC2Q3VbZEwvnEaeUvEAnZWvWB5rwqSobdA7/AgQs="></script>
+    "gMsRy4XUFF4qI/rtV7yzQ9BlrfReIp+qSAxWc+cZXLg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【U10prototype】ver.5.0.1","description":"----------------------------------------\n\n現在のデータは最新のVRCに対応するため以下の変更を行いました。\n・2022年5月よりシェーダーの同梱を廃止\n・2022年8月よりアニメーションの同梱を廃止\nThe following changes have been made to the current data to comply with the latest VRC\n*Shaders will no longer be included in May 2022.\n*The animation will no longer be included in the package as of August 2022.\n\n\nパッケージのインポートを行う前に以下のシェーダーをDLし、インポートしてください。\nU10PTで使用しているシェーダーは以下の通りです。\nPlease DL and import the following shaders before importing the package.\nThe following shaders are used in U10PT.\n\n「ArxCharacterShaders」\nhttps://packetbird.booth.pm/items/2493539\n\n「ユニティちゃんトゥーンシェーダー2.0」\nhttps://unity-chan.com　右上のDATA DOWNLOADから進んだ先。\n\n「Crystal Shader」\nhttps://booth.pm/ja/items/1148311\n\n\nまた、アニメーションファイルもDLしインポートしてください。\nアニメーションファイルは、BOOTHの商品ページから無料でDLできるようになっています。\nPlease also DL and import the animation files.\nThe animation files can be downloaded free of charge from the BOOTH product page.\n\n----------------------------------------\n\n\nオリジナルの3Dモデル、\n量産型アンドロイドのU10です。\nU10と書いて「ユト」と読みます。\n※VRchatの公式アバターリストに置いてあるものとはちょっとだけ仕様が違います。\n\nPCおよびQUESTでパフォーマンスランクがExcellentになるよう、ver.5.0にて大幅な改修を行いました。QUESTでもメカ手脚の女の子を楽しめます！（人型の腕とメカ腕を選べます）ぜひFallback Avatarとしてご利用ください。\n\nパフォーマンス重視のため揺れ物などは特に設定されていませんが、髪の毛に簡易ボーンが入っているので一応揺らすことはできます。PhysBone設定済みのプレハブを同梱しています（パフォーマンスランクはPCでGood）\n\nとても軽いので、大体どのサービスでもアバターとして利用することができると思います！\n\nver.5.0現在、VRM版は同梱されていません。後日追加予定です。","url":"https://booth.pm/ja/items/1131052","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1131052/9af878f2-491c-48c8-aff2-4bd342a8b2ed_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3MUAC2Q3VbZEwvnEaeUvEAnZWvWB5rwqSobdA7/AgQs="></script>
+    nonce="gMsRy4XUFF4qI/rtV7yzQ9BlrfReIp+qSAxWc+cZXLg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -646,9 +646,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
