--- a/VRChat/92/1035292.html
+++ b/VRChat/92/1035292.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "rGCz01gq089oa58Yv4ihfA48tHfdWaEThRguY1tYDAE="></script>
+    "VXluac/mJKS/QDB3A5svlGnA4tSYrcks5JfNM8u4Ihs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル　ソファ　ゲーム・漫画等利用可","description":"[2021年2月3日更新]本モデルはポリゴン・UV展開・テクスチャを再編集いたしました。なお、これまで配布していた旧モデルにつきましては、再編集に伴い配布を終了いたしました。\n\n・3Dモデル\nソファ（sofa02.fbx）モデル容量：41kB  ポリゴン数：734\n・テクスチャ\nソファUV展開図（chocolate-set.png）\nテクスチャ容量：211kB テクスチャサイズ：512×512\n\n拡張子：FBX形式\n\n本製品はソファを模して作成した３Dモデルです。\n拡張子はFBX形式のため、Unity・blenderなどで、ご利用いただけます。\n\n本製品は無料になります。\nまた、Papyrus Projectが販売する他製品をダウンロードする際の判断材料としてご利用ください。\n本製品をご利用する際は必ず添付されております取扱説明書をお読みください。\n\n※利用用途\n本製品はデザインの変更、モデルの改変等を自由に行ってかまいません。\n本製品が含まれるゲーム・アニメーション等の映像作品や漫画・絵本等のイラスト作品の譲渡・転載・配布・販売する行為は自由に行ってかまいません。その際、本製品の製作者の名前を明記する必要はありません。本製品にデザインの変更・モデルの改変等を行った場合でも同条件といたします。\n\n※注意事項 \nⅠ.本製品をご利用したことで損害・損失・その他の不利益等が発生した場合、当方は一切の責任を負いませんので、ご了承ください。\nⅡ.本製品を３Dモデルとして譲渡・転載・配布・販売する行為により、製作者側に損害が生じた場合、その行為を行った者または団体は、当該損害を賠償するものとします。もし、これらの行為に該当するかご確認する場合は、お問い合わせください。","url":"https://booth.pm/ja/items/1035292","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/638bdca8-8bc8-4901-b690-2fef93d798d3/i/1035292/1f874c80-a065-497e-b6a3-c766fc8a84f1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rGCz01gq089oa58Yv4ihfA48tHfdWaEThRguY1tYDAE="></script>
+    nonce="VXluac/mJKS/QDB3A5svlGnA4tSYrcks5JfNM8u4Ihs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -425,9 +425,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
